k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-disease-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: heart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heart-disease-service
            port:
              number: 80
